[package]
name = "tetris-cli"
version = "22.66.1"
edition = "2021"
description = "A tetris clone for your terminal."
license = "GPL-3.0"
repository = "https://github.com/blueOkiris/tetris-cli"

[dependencies]
termion = "1.5.6"
rand = "0.8.4"
confy = "0.4.0"
serde = { version = "1.0", features = [ "derive" ] }
big_num = "0.1.0"
libmath = "0.2.1"
